fixing panel render bug on mobile

--- a/src/css/EditingPanel.module.css
+++ b/src/css/EditingPanel.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 0.5rem;
+  padding: 0.75rem;
   padding-top: 1rem;
 }
 
