--- a/src/css/NoteList.module.css
+++ b/src/css/NoteList.module.css
@@ -40,7 +40,7 @@
   margin-bottom: 5px;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.5;
   color: lightgray;
   background-color: var(--themePrimary);
